# rust-sdml

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.org  TODO.org  _typos.toml  sdml-catalog.json  tags.rs
sdml-cli/: Cargo.toml  README.md  README.org
sdml-cli/src/: main.rs
sdml-cli/src/commands/: book.rs  convert.rs  deps.rs  doc.rs  draw.rs  generate.rs  highlight.rs  mod.rs  tags.rs  validate.rs  versions.rs  view.rs
sdml-core/: Cargo.toml  README.md  README.org
sdml-core/doc-src/: header.html
sdml-core/lib/: skos.sdm  xml.sdm
sdml-core/src/: cache.rs  error.rs  generate.rs  lib.rs  load.rs  repr.rs  store.rs  syntax.rs
sdml-core/src/config/: external.rs  mod.rs  sdml_stdlib.json
sdml-core/src/generate/: mod.rs  source.rs
sdml-core/src/model/: annotations.rs  check.rs  comments.rs  constraints.rs  default_terms.json  identifiers.rs  ids.rs  imports.rs  macros.rs  members.rs  mod.rs  mods.rs  modules.rs  types.rs  values.rs  walk.rs
sdml-core/src/stdlib/: dc.rs  dc_elements.rs  dc_elements.sdml  dc_terms.rs  dc_terms.sdml  dc_type.sdml  dcam.rs  dcmi_type.sdm  dcterms.rs  dctype.rs  gs1_gln.sdml  gs1_gtin.sdml  guid.sdml  iso_17442.sdml  iso_3166.rs  iso_4217.rs  iso_9362.sdml  macros.rs  mod.rs  owl.rs  rdf.rs  rdf.sdm  rdfs.rs  rfc_6838.sdml  sdml.rs  skos.rs  xsd.rs
sdml-core/src/syntax/: grammar.rs  mod.rs  model.rs
sdml-deps/: Cargo.toml  README.md
sdml-deps/src/: lib.rs
sdml-deps/src/write/: dot.rs  header.dot  mod.rs  rdf.rs  text.rs
sdml-deps/tests/: test_deps_dot.rs  test_deps_rdf.rs  test_deps_text.rs
sdml-document/: Cargo.toml  doc-book-schema.json
sdml-document/src/: common.rs  lib.rs  macros.rs  markdown.rs  mod.rs  org_mode.rs
sdml-document/src/org/: appendix.org  macros.org  top-book.org
sdml-errors/: Cargo.toml  README.md  README.org
sdml-errors/examples/: example_b0001.sdm  example_e0102.sdm  example_e0105.sdm  example_e0106_1.sdm  example_e0106_3.sdm  example_e0114.sdm  example_e0115.sdm  example_e0120.sdm  example_e0123.sdm  example_e0124.sdm  example_i0501.sdm  example_i0503.sdm  example_i0505.sdm  example_w0301.sdm  example_w0302.sdm  example_w0304.sdm  nonversioned_other.sdm  versioned_other.sdm
sdml-errors/i18n/en/: sdml_errors.ftl
sdml-errors/src/: errors.rs  i18n.rs  lib.rs
sdml-errors/src/diagnostics/: codes.rs  color.rs  functions.rs  reporter.rs
sdml-generate/: Cargo.toml  README.md  README.org
sdml-generate/src/: console.rs  errors.rs  exec.rs  lib.rs  macros.rs
sdml-generate/src/actions/: abbrev.rs  deps.rs  highlight.rs  mod.rs  sdml-highlight.css  tags.rs
sdml-generate/src/color/: mod.rs  rdf.rs  sdml.rs
sdml-generate/src/convert/: json.rs  mod.rs  org.rs  rdf.rs  sexpr.rs  source.rs
sdml-generate/src/draw/: concepts.rs  erd.rs  filter.rs  mod.rs  uml.rs
sdml-generate/tests/: common.rs  test_deps.rs  test_rdf.rs  test_source.rs
sdml-generate/tests/examples/: annotation_multiple_separate.sdm  annotation_single_double.sdm  constraint_informal_language.sdm  import_module_version.deps  import_multiple_members.sdm  import_multiple_mixed.sdm  import_multiple_module_version.deps  import_multiple_modules.deps  mkex.sh  property_def_empty.sdm  property_def_some.sdm  property_def_used.sdm  type_class_empty.sdm  type_class_methods.sdm  type_class_subtype.sdm  type_constructor_fix9.sdm
sdml-json/: Cargo.toml  README.md
sdml-json/src/: lib.rs
sdml-json/src/generate/: mod.rs
sdml-json/src/read/: mod.rs
sdml-json/src/write/: mod.rs
sdml-json/tests/: test_standard_corpus_context.rs  test_standard_corpus_model.rs
sdml-parse/: Cargo.toml  README.md  README.org
sdml-parse/src/: error.rs  lib.rs  load.rs  parse.rs  resolve.rs
sdml-parse/src/parse/: annotations.rs  identifiers.rs  imports.rs  macros.rs  mod.rs  modules.rs  values.rs
sdml-parse/tests/: test_api.rs  test_examples.rs  test_load_catalog.rs  test_standard_corpus.rs
sdml-parse/tests/catalog_examples/: custom-catalog.json
sdml-rdf/: Cargo.toml  README.md
sdml-rdf/src/: errors.rs  lib.rs
sdml-rdf/src/read/: mod.rs
sdml-rdf/tests/: test_module.rs  test_standard_corpus_nt.rs  test_standard_corpus_ttl.rs
sdml-src/: Cargo.toml  README.md
sdml-src/src/: lib.rs
sdml-src/tests/: api.rs  test_standard_corpus_defs.rs  test_standard_corpus_full.rs  test_standard_corpus_mems.rs
sdml-tera/: Cargo.toml  README.md
sdml-tera/src/: add_ons.rs  cli.rs  context.rs  error.rs  lib.rs
sdml-tera/tests/: context.json  dimension.sdm  test_context.rs  test_render.rs
sdml-tests/: Cargo.toml  README.md
sdml-tests/corpus/: annotation_escaped_strings.sdm  annotation_multiple_as_list.sdm  annotation_multiple_as_set.sdm  annotation_multiple_decimal.sdm  annotation_multiple_double.sdm  annotation_multiple_integer.sdm  annotation_multiple_iri.sdm  annotation_multiple_language_string.sdm  annotation_multiple_ordered.sdm  annotation_multiple_separate.sdm  annotation_multiple_string.sdm  annotation_multiple_unique.sdm  annotation_single_binary.sdm  annotation_single_boolean.sdm  annotation_single_constructor.sdm  annotation_single_decimal.sdm  annotation_single_double.sdm  annotation_single_integer.sdm  annotation_single_iri.sdm  annotation_single_language_string.sdm  annotation_single_rational.sdm  annotation_single_string.sdm  cardinality_exactly_one.sdm  cardinality_one_to_many.sdm  cardinality_two_to_eight.sdm  cardinality_zero_to_many.sdm  cardinality_zero_to_many_as_list.sdm  cardinality_zero_to_many_as_set.sdm  cardinality_zero_to_many_nonunique.sdm  cardinality_zero_to_many_ordered.sdm  cardinality_zero_to_many_unique.sdm  cardinality_zero_to_many_unordered.sdm  cardinality_zero_to_one.sdm  constraint_formal_atomic_sentence.sdm  constraint_formal_binary_biconditional.sdm  constraint_formal_binary_conjunction.sdm  constraint_formal_binary_disjunction.sdm  constraint_formal_binary_exclusive_disjunction.sdm  constraint_formal_binary_implication.sdm  constraint_formal_equation.sdm  (+94 more)
sdml-tests/src/: lib.rs
sdml_error/: Cargo.toml  README.md  README.org
sdml_error/src/: codes.rs  diagnostics.rs  errors.rs  lib.rs
(+1168 files in other folders)
