[package]
name = "sdml"
description = "Rust CLI for Simple Domain Modeling Language (SDML)"
version = "0.1.2"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license = "MIT"
readme = "README.md"
edition = "2021"
publish = true
default-run = "sdml"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[[bin]]
name = "sdml"
path = "src/bin/main.rs"

[dependencies]
ansi_term = "0.12.1"
ariadne = "0.3.0"
clap = { version = "4.3.2", features = ["derive", "env", "wrap_help"] }
clap-verbosity-flag = "2.0.1"
concolor = { version = "0.1.1", features = ["auto"] }
graphviz-rust = "0.6.2"
language-tags = { version = "0.3.2", features = ["serde"] }
lazy_static = "1.4.0"
ordered-float = "3.7.0"
regex = "1.8.4"
rust_decimal = "1.29.1"
search_path = "0.1.4"
serde = { version = "1.0.164", features = ["serde_derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
tree-sitter-sdml = { version = "0.1.12", path = "../../tree-sitter-sdml" }
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
