[package]
name = "sdml-cli"
description = "Rust CLI for Simple Domain Modeling Language (SDML)"
version = "0.4.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[[bin]]
name = "sdml"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
human-panic = "2.0.2"
objio = "0.1.2"
sdml-core = { version = "0.4.0", features = ["serde", "terms", "tree-sitter"], path = "../sdml-core" }
sdml-errors = { version = "0.4.0", features = ["templates"], path = "../sdml-errors" }
sdml-generate = { version = "0.4.0", path = "../sdml-generate" }
sdml-json = { version = "0.4.0", path = "../sdml-json" }
sdml-parse = { version = "0.4.0", path = "../sdml-parse" }
sdml-rdf = { version = "0.4.0", path = "../sdml-rdf" }
sdml-tera = { version = "0.4.0", path = "../sdml-tera" }
sexpr-out = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree-sitter-sdml = { version = "0.4.9", path = "../../tree-sitter-sdml" }
