[package]
name = "sdml-core"
description = "Core Model for Simple Domain Modeling Language (SDML)"
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.org"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--html-in-header", "doc-src/header.html"]

[features]
default = ["serde", "terms"]
serde = ["dep:serde"]
terms = ["serde", "dep:serde_json", "dep:serde_regex"]

[dependencies]
codespan-reporting = "0.11.1"
convert_case = "0.6"
lazy_static = "1.4"
ordered-float = { version = "4.2", features = ["serde"] }
regex = "1.10.2"
rust_decimal = { version = "1.34.2", features = ["serde"] }
sdml-errors = { version = "0.3.0", path = "../sdml-errors" }
serde = { version = "1.0.195", features = ["derive"], optional = true }
serde_json = { version = "1.0.113", optional = true }
serde_regex = { version = "1.1", optional = true }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree-sitter = "0.23"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.3"
