[package]
name = "sdml-deps"
description = "Simple Domain Modeling Language (SDML) Dependency View"
version = "0.4.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["dot", "rdf"]
dot = []
rdf = []

[dependencies]
sdml-core = { version = "0.4.0", features = ["serde", "tree-sitter"], path = "../sdml-core" }
nu-ansi-term = "0.50.1"
text_trees = "0.1.2"
url = "2.5.2"

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.1"
sdml-errors = { version = "0.4.0", path = "../sdml-errors" }
sdml-parse = { version = "0.4.0", path = "../sdml-parse" }
sdml-tests = { path = "../sdml-tests" }
