[package]
name = "sdml-errors"
description = "Simple Domain Modeling Language (SDML) errors and diagnostics."
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.org"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
codespan-reporting = "0.11.1"
heck = "0.5"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.9.1"
rust-embed = "8.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
