[package]
name = "sdml-errors"
description = "Simple Domain Modeling Language (SDML) errors and diagnostics."
version = "0.4.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = []
templates = ["tera"]

[dependencies]
codespan-reporting = "0.11.1"
heck = "0.5"
i18n-embed = { version = "0.15", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.9.1"
language-tags = "0.3.2"
rust-embed = "8.5"
tera = { version = "1.20.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
