[package]
name = "sdml-generate"
description = "Simple Domain Modeling Language (SDML) generated Artifacts"
version = "0.3.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.org"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["deps", "hl", "json", "s-expr"]
deps = ["text_trees"]
hl = ["tree-sitter-highlight"]
json = ["serde_json"]
s-expr = []

[dependencies]
nu-ansi-term = "0.50.0"
regex = "1.10.3"
sdml-core = { version = "0.3.0", features = ["serde"], path = "../sdml-core" }
sdml-errors = { version = "0.3.0", path = "../sdml-errors" }
serde = { version = "1.0.195", features = ["derive"] }
serde_regex = "1.1.0"
tempfile = "3.10.0"
tracing = "0.1.40"
tree-sitter-sdml = "0.3.2"
url = "2.5.0"
indicatif = "0.17.8"
console = "0.15.8"

# optional-dependencies
serde_json = { version = "1.0.113", optional = true }
text_trees = { version = "0.1.2", optional = true }
tree-sitter-highlight = { version = "0.23", optional = true }

[dev-dependencies]
paste = "1.0.14"
pretty_assertions = "1.3.0"
sdml-parse = { version = "0.3.0", path = "../sdml-parse" }
