[package]
name = "sdml-generate"
description = "Simple Domain Modeling Language (SDML) generated Artifacts"
version = "0.3.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.org"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["deps", "hl", "json", "s-expr"]
deps = ["text_trees"]
hl = ["tree-sitter-highlight"]
json = ["serde_json"]
s-expr = []

[dependencies]
nu-ansi-term = "0.50.1"
regex = "1.11.0"
sdml-core = { version = "0.3.1", features = ["serde"], path = "../sdml-core" }
sdml-errors = { version = "0.3.1", path = "../sdml-errors" }
serde = { version = "1.0.210", features = ["derive"] }
serde_regex = "1.1.0"
tempfile = "3.13.0"
tracing = "0.1.40"
tree-sitter-sdml = "0.3.3"
url = "2.5.2"
indicatif = "0.17.8"
console = "0.15.8"

# optional-dependencies
serde_json = { version = "1.0.128", optional = true }
text_trees = { version = "0.1.2", optional = true }
tree-sitter-highlight = { version = "0.23", optional = true }

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.1"
sdml-parse = { version = "0.3.0", path = "../sdml-parse" }
