[package]
name = "sdml-generate"
description = "Simple Domain Modeling Language (SDML) generated Artifacts"
version = "0.4.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[features]
default = ["deps", "hl"]
deps = ["text_trees"]
hl = ["tree-sitter-highlight"]

[dependencies]
console = "0.15.8"
indicatif = "0.17.8"
nu-ansi-term = "0.50.1"
regex = "1.11.0"
sdml-core = { version = "0.4.0", features = ["serde"], path = "../sdml-core" }
sdml-errors = { version = "0.4.0", path = "../sdml-errors" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_regex = "1.1.0"
tempfile = "3.14.0"
text_trees = { version = "0.1.2", optional = true }
tracing = "0.1.40"
tree-sitter-highlight = { version = "0.24.4", optional = true }
tree-sitter-sdml = "0.4.1"
url = "2.5.2"

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.1"
sdml-parse = { version = "0.4.0", path = "../sdml-parse" }
sdml-tests = { path = "../sdml-tests" }
