[package]
name = "sdml-parse"
description = "Parser for Simple Domain Modeling Language (SDML)"
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.org"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
codespan-reporting = "0.11.1"
rust_decimal = "1.36.0"
sdml-core = { version = "0.3.1", features = ["serde"], path = "../sdml-core" }
sdml-errors = { version = "0.3.1", path = "../sdml-errors" }
search_path = "0.1.4"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tree-sitter = "0.23"
tree-sitter-sdml = "0.3.3"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4"
