[package]
name = "sdml-rdf"
description = "Simple Domain Modeling Language (SDML) RDF I/O"
version = "0.3.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.org"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
rdftk_core = "0.5"
rdftk_io = "0.3.1"
rdftk_iri = "0.2.5"
sdml-core = { version = "0.3.1", features = ["serde", "tree-sitter"], path = "../sdml-core" }
sdml-errors = { version = "0.3.1", path = "../sdml-errors" }
url = "2.5"

[dev-dependencies]
pretty_assertions = "1.4"
sdml-parse = { version = "0.3.0", path = "../sdml-parse" }
