[package]
name = "sdml-rdf"
description = "Simple Domain Modeling Language (SDML) RDF I/O"
version = "0.4.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license-file = "../LICENSE"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
objio = "0.1.1"
rdftk_core = { version = "0.5.5", path = "../../../rust/rust-rdftk/rdftk_core" }
rdftk_io = { version = "0.3.3", path = "../../../rust/rust-rdftk/rdftk_io" }
rdftk_iri = { version = "0.2.5", path = "../../../rust/rust-rdftk/rdftk_iri" }
sdml-core = { version = "0.4.0", features = ["serde", "tree-sitter"], path = "../sdml-core" }
sdml-errors = { version = "0.4.0", path = "../sdml-errors" }
url = "2.5"

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4"
sdml-parse = { version = "0.4,0", path = "../sdml-parse" }
sdml-tests = { path = "../sdml-tests" }
