[package]
name = "sdml-src"
description = "Simple Domain Modeling Language (SDML) source generator."
version = "0.4.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--html-in-header", "doc-src/header.html"]

[dependencies]
sdml-core = { version = "0.4.1", features = ["serde", "tree-sitter"], path = "../sdml-core" }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.1"
sdml-parse = { version = "0.4.1", path = "../sdml-parse" }
sdml-tests = { path = "../sdml-tests" }
