[package]
name = "sdml-tera"
version = "0.4.1"
description = "Simple Domain Modeling Language (SDML) Tera Integration"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
repository = "https://github.com/johnstonskj/rust-sdml.git"
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[[bin]]
name = "sdml-tera"
path = "src/cli.rs"
doc = false
required-features = ["cli"]

[features]
cli = ["clap", "clio", "human-panic", "sdml-parse", "serde_json"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"], optional = true }
clio = { version = "0.3.5", features = ["clap-parse"], optional = true }
heck = "0.5.0"
human-panic = { version = "2.0.2", optional = true }
sdml-core = { version = "0.4.1", features = ["serde"], path = "../sdml-core" }
sdml-errors = { version = "0.4.1", features = ["templates"], path = "../sdml-errors" }
sdml-json = { version = "0.4.1", path = "../sdml-json" }
sdml-parse = { version = "0.4.1", path = "../sdml-parse", optional = true }
serde_json = { version = "1.0.128", optional = true }
tera = "1.20.0"

[dev-dependencies]
pretty_assertions = "1.4"
sdml-parse = { version = "0.4.1", path = "../sdml-parse" }
serde_json = "1.0.128"
