[package]
name = "sdml-tests"
version = "0.4.1"
description = "Test Cases, not for general use"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
paste = "1.0.15"
pretty_assertions = "1.4"
sdml-core = { version = "0.4.1", features = ["serde", "tree-sitter"], path = "../sdml-core" }
sdml-parse = { version = "0.4.1", path = "../sdml-parse" }
